@@ -19,6 +19,9 @@
 - CHG: Added a timeout to the status cache. This
        is a workaround so that refreshing (pressing
        F5) isn't needed that much. (Stefan)
+- CHG: if only the properties were modified then
+       this is indicated by a "(P only)" in
+       the status text in the commit dialog. (Stefan)
 
 Version 0.15.2
 - BUG: The "Check for updates" dialog could
